# inferlens

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: TRACE_SPEC.md  collectors.md  overhead.md  overview.md  upstream-gaps.md  vllm-internals.md
examples/: vllm_plugin_smoke.py  workload.py
inferlens/: __init__.py  cli.py  record.py  trace_io.py
inferlens/collectors/: __init__.py
inferlens/collectors/vllm/: __init__.py  kv_events.py  stat_logger.py  translate.py
inferlens/schema/: __init__.py  events.py
tests/: test_cli.py  test_record.py  test_trace_io.py  test_vllm_kv_events.py  test_vllm_translate.py
viewer/: DESIGN.md  index.html  package-lock.json  package.json  tsconfig.test.json
viewer/src/: App.tsx  index.css
viewer/src/trace/: load.test.ts  load.ts  types.ts
